--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "loader/src/external/lsplt"]
+[submodule "LSPlt"]
 	path = loader/src/external/lsplt
-	url = https://github.com/JingMatrix/LSPlt
+	url = https://github.com/PerformanC/LSPlt
